demos/demo-rook-s3/ingress/rook-static-sts.yaml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: rook-static
  name: rook-static
  namespace: nuvolaris
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rook-static
  serviceName: rook-static-svc
  template:
    metadata:
      labels:
        app: rook-static
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: nuvolaris-role
                operator: NotIn
                values:
                - invoker
            weight: 100
          - preference:
              matchExpressions:
              - key: nuvolaris-role
                operator: In
                values:
                - core
            weight: 80
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - rook-static
            topologyKey: kubernetes.io/hostname
      containers:
      - image: nginxinc/nginx-unprivileged:1.24
        imagePullPolicy: IfNotPresent
        name: rook-static
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/cache/nginx
          name: rook-static-pvc
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-default-conf
          subPath: default.conf
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-conf
          subPath: nginx.conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: nuvolaris-role
        operator: Equal
        value: core
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: default.conf
            path: default.conf
          name: rook-static-conf-cm
        name: nginx-default-conf
      - configMap:
          defaultMode: 420
          items:
          - key: nginx.conf
            path: nginx.conf
          name: rook-static-conf-cm
        name: nginx-conf
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: rook-static-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: rook-ceph-block
      volumeMode: Filesystem
